add tfsec to pre-commit

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,3 +6,8 @@ repos:
       - id: tofu-validate
       - id: tflint
       - id: terragrunt-hclfmt
+
+  - repo: https://github.com/aquasecurity/tfsec
+    rev: v1.28.14  # Use the latest stable version or pin your preferred one
+    hooks:
+      - id: tfsec
