--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,6 +12,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Install mise
+        uses: jdx/mise-action@v2.2.3
+
+
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
