--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -5,7 +5,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  run-pre-commit:
+  CI:
     runs-on: ubuntu-latest
 
     steps:
@@ -15,11 +15,10 @@ jobs:
       - name: Install mise
         uses: jdx/mise-action@v2.2.3
 
-
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.x'
+          python-version: '3.13.1'
 
       - name: Install pre-commit
         run: pip install pre-commit
