--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -2,7 +2,14 @@ name: CI
 
 on:
   pull_request:
+    branches:
+      - main
   workflow_dispatch:
+
+# Prevent CI to run concurrently
+concurrency:
+  group: ci-${{ github.head_ref || github.run_id }}
+  cancel-in-progress: true
 
 jobs:
   CI:
