--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -38,6 +38,13 @@ jobs:
           cd examples/stacks/foo-bar-local
           terragrunt stack generate
           terragrunt stack run plan
+      
+      - name: Check for 'run-terratest' label
+        id: label_check
+        uses: actions-ecosystem/action-has-label@v1
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          label: run-terratest   # <--- this is the label name
 
        # Fail if label is missing
       - name: Fail if 'run-terratest' label is missing
