--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -47,18 +47,12 @@ jobs:
           if echo "$labels" | grep -qw "run-terratest"; then
             echo "label_present=true" >> $GITHUB_OUTPUT
           else
-            echo "The 'run-terratest' label is not present on this PR."
+            echo "The 'run-terratest' label is not present on this PR. Please add this label to run infra tests."
             exit 1
           fi
         env:
           PR_NUMBER: ${{ github.event.pull_request.number }} 
-
-       # Fail if label is missing
-      - name: Fail if 'run-terratest' label is missing
-        if: steps.label_check.outputs.has_label != 'true'
-        run: |
-          echo "ERROR: Missing 'run-terratest' label. Please add this label to run infra tests."
-          exit 1
+          GH_TOKEN: ${{ github.token }}
 
       # Run Terratest only if label present
       - name: Run Terratest
