add(CI): run terratest if label `run-terratest` is present
* add doc for CI
* add doc for setting branch protection rules
* fix(CI): check if label run-terratest is present

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -39,14 +39,21 @@ jobs:
           terragrunt stack generate
           terragrunt stack run plan
 
-       # Fail if label is missing
-      - name: Fail if 'run-terratest' label is missing
-        if: steps.label_check.outputs.has_label != 'true'
+      - name: Check if PR has 'run-terratest' label
+        id: check_label
         run: |
-          echo "ERROR: Missing 'run-terratest' label. Please add this label to run infra tests."
-          exit 1
+          labels=$(gh pr view "$PR_NUMBER" --json labels -q '.labels[].name')
+          echo "Labels on PR: $labels"
+          if echo "$labels" | grep -qw "run-terratest"; then
+            echo "label_present=true" >> $GITHUB_OUTPUT
+          else
+            echo "The 'run-terratest' label is not present on this PR. Please add this label to run infra tests."
+            exit 1
+          fi
+        env:
+          PR_NUMBER: ${{ github.event.pull_request.number }} 
+          GH_TOKEN: ${{ github.token }}
 
       # Run Terratest only if label present
       - name: Run Terratest
-        if: steps.label_check.outputs.has_label == 'true'
         run: go test -v ./tests/... -timeout 30m
